[gd_scene load_steps=5 format=3 uid="uid://c9mqr6s4ty3z"]

[ext_resource type="Script" path="res://scenes/entities/projectiles/camera_bomb.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/graphics/items/camera.png" id="2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 80.0

[node name="CameraBomb" type="RigidBody2D"]
collision_layer = 16
collision_mask = 5
gravity_scale = 1.0
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_2")

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="BeepAudio" type="AudioStreamPlayer2D" parent="."]